Fix info card spacing

--- a/styles.css
+++ b/styles.css
@@ -102,18 +102,17 @@ ul {
     display: flex;
     flex-flow: row wrap;
     padding: 1em 3em;
-    justify-content: center;
     align-items: center;
-    gap:3em;
+    gap:3em
 }
 
 .card-group{
     display: flex;
     flex-flow: row nowrap;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     gap:3em;
-    flex: 0 0 350px;
+    flex: 1 0 350px;
 }
 
 .card{
